Revert "WIP fixes"
This reverts commit e2a3b0f5eef17a330ead48d174f560545b33ba9b.

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,12 +1,11 @@
 [[constraint]]
-  name = "code.google.com/p/go-charset/charset"
   branch = "master"
+  name = "github.com/datasift/go-charset"
   source = "github.com/stripe/go-charset"
 
 [[constraint]]
   name = "github.com/elazarl/goproxy"
   version = "1.1.0"
-  source = "github.com/stripe/goproxy"
 
 [prune]
   go-tests = true
