--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -5,7 +5,7 @@
 
 [[constraint]]
   name = "github.com/elazarl/goproxy"
-  version = "1.1.0"
+  revision = "0890fc15d1b6428a674b8252a2d238ca589daf73"
 
 [prune]
   go-tests = true
